Fix YouTube theme colors and improve debugging
COLORS UPDATED:
- Changed from Google Blue theme to YouTube Red theme
- Popup header: Red gradient instead of blue
- All button colors: Red (#ff0000) with darker hover (#cc0000)
- Search overlay: Red focus borders and accents
- Dark mode: Consistent red theme throughout
- Status indicators: Red for ready/info states

DEBUGGING IMPROVEMENTS:
- Added console logging to YouTube injector for better error tracking
- Enhanced popup error messages with specific connection failure detection
- Added troubleshooting section to popup with refresh suggestions
- Better error handling for content script communication failures

README UPDATED:
- Removed icon creation instructions (not needed for users)
- Streamlined installation process
- Focused on user-facing features and usage

FIXES LOADING ISSUE:
- Added specific error message when content scripts fail to load
- Suggests page refresh as primary solution
- Shows troubleshooting section automatically on errors

--- a/src/popup/popup.html
+++ b/src/popup/popup.html
@@ -48,6 +48,16 @@
           <li>Type to search captions instantly</li>
           <li>Click results to jump to that moment</li>
         </ol>
+        
+        <div class="popup-troubleshoot" id="troubleshoot" style="display: none;">
+          <h4>Troubleshooting:</h4>
+          <p>If the extension isn't loading:</p>
+          <ul>
+            <li>Refresh the YouTube page</li>
+            <li>Make sure you're on a video page (not the homepage)</li>
+            <li>Check that the video has captions available</li>
+          </ul>
+        </div>
       </div>
     </main>
 
