--- a/src/popup/popup.html
+++ b/src/popup/popup.html
@@ -10,6 +10,7 @@
   <div class="popup-container">
     <header class="popup-header">
       <div class="popup-logo">
+        <img src="../assets/icons/icon32.png" alt="SeekSpeak" class="popup-icon">
         <h1>SeekSpeak</h1>
         <span class="popup-version">v1.0.0</span>
       </div>
