--- a/src/popup/popup.html
+++ b/src/popup/popup.html
@@ -64,6 +64,9 @@
 
     <footer class="popup-footer">
       <div class="popup-links">
+        <a href="#" id="options-link" class="footer-link">
+          ⚙️ Options
+        </a>
         <a href="https://github.com/Dkmariolink/SeekSpeak" target="_blank" class="footer-link">
           GitHub
         </a>
