--- a/src/popup/popup.html
+++ b/src/popup/popup.html
@@ -75,7 +75,7 @@
         </a>
       </div>
       <div class="popup-credits">
-        Made with ❤️ for YouTube users
+        Made with ❤️ for YouTube by Dkmariolink
       </div>
     </footer>
   </div>
